--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         <div class="header-frame">
           <h1>Aparna Deshpande</h1>
           <h2>PhD Physics, <br/>IISER Pune</h2> 
+
           <div class="mail">
             <img id="mail-icon" src="Artifacts/mail-icon.jpg" alt="mail-icon"> 
-            aparna.d@iiserpune.ac.in</div>
-          <div class="socail-account">
+            aparna.d@iiserpune.ac.in
+          </div>
+          
+            <div class="socail-account">
             <a href="https://www.linkedin.com/in/aparna-deshpande-01927015/" class="social-account-link"><img src="Artifacts/linkedin_logo.jpg" alt="linkedin"></a>
             <a href="https://www.iiserpune.ac.in/research/department/physics/people/faculty/regular-faculty/aparna-deshpande/259" class="social-account-link"><img src="Artifacts/IISERPune-Logo.jpg" alt="linkedin"></a>
           </div>
