--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
         <div class="toggler">
           <br/><br/>
-          <button id="short" class="show" onclick="DisplayBio('short')"> In Brief</button>
-          <button id="long" onclick="DisplayBio('long')">In Detail</button>
-          <button id="research" onclick="DisplayBio('research')">Research</button>
-          <button id="outreach" onclick="DisplayBio('outreach')"> Outreach</button>
+          <div class="button-cover"><button id="short" class="button-item" onclick="DisplayBio('short')"> In Brief</button></div>
+          <div class="button-cover"><button id="long" class="button-item" onclick="DisplayBio('long')">At Length</button></div>
+          <div class="button-cover"><button id="research" class="button-item" onclick="DisplayBio('research')">Research</button></div>
+          <div class="button-cover"><button id="outreach" class="button-item" onclick="DisplayBio('outreach')"> Outreach</button></div>
+          <div class="button-cover"><button id="group" class="button-item" onclick="DisplayBio('group')"> Group</button></div>
+          <br/><br/><br/><br/>
         </div>
 
         <div id="bioshort" class="bio short">
@@ -76,14 +78,16 @@
         <div id="bioresearch" class="bio research">
           <br/><br/>
           <center><b><u>Current Research Topics</u></b></center>
+          <br/>
+          <ul>
+          <li><b>Borophene:</b> <i>The world of 2D materials, also known as flatland, that emerged with the disovery of graphene not too long ago, has a new entrant named BOROPHENE which is the 2D network of boron atoms. Borophene can host vacancy-mediated superstructural motifs that induce structural polymorphism.</i></li>
           <br/><br/>
-          <b>Borophene:</b> <i>The world of 2D materials, also known as flatland, that emerged with the disovery of graphene not too long ago, has a new entrant named BOROPHENE which is the 2D network of boron atoms. Borophene can host vacancy-mediated superstructural motifs that induce structural polymorphism.</i>
+          <li><b>Heterostructures of 2D materials:</b><i> The family of exfoliable materials like graphene, and transition metal dichalcogenides like MoS2, WS2, WSe2 and so on, are amenable to a vertical and lateral stacking in the form of single layers due to the weak Van der Waals interaction between the layers. Such an assembly yields emergent properties.</i></li>
           <br/><br/>
-          <b>Heterostructures of 2D materials:</b><i> The family of exfoliable materials like graphene, and transition metal dichalcogenides like MoS2, WS2, WSe2 and so on, are amenable to a vertical and lateral stacking in the form of single layers due to the weak Van der Waals interaction between the layers. Such an assembly yields emergent properties.</i>
+          <li><b>Charge density waves:</b><i> Charge density waves (CDWs) are a periodic modulation of electronic density concomitant with lattice distortion. The origin of CDWs in TiSe2 and VSe2 is still an open and an interesting question.</i></li>
           <br/><br/>
-          <b>Charge density waves:</b><i> Charge density waves (CDWs) are a periodic modulation of electronic density concomitant with lattice distortion. The origin of CDWs in TiSe2 and VSe2 is still an open and an interesting question.</i>
-          <br/><br/>
-          <b>2D Van der Waals magnetic materials:</b><i> The isolation of a monolayer of magnetic material has opened an exciting subfield to probe stable magnetism in 2D, and that can have long standing implications in the world of spintronics.</i>
+          <li><b>2D Van der Waals magnetic materials:</b><i> The isolation of a monolayer of magnetic material has opened an exciting subfield to probe stable magnetism in 2D, and that can have long standing implications in the world of spintronics.</i></li>
+        </ul>
         </div>
         <div id="biooutreach" class="bio outreach">
           <br/><br/>
@@ -91,6 +95,41 @@
           <br/><br/>
           Talk on '<a href="https://www.youtube.com/watch?v=x2zSeHxMkoE">Reaching out to atoms, molecules and surfaces using scanning tunneling microscopy</a>' in the Science Gappa Series at Dr. Abasaheb Garware College Pune.
       </div>
+      <div id="biogroup" class="bio group">
+        <br/><br/>
+        <div class="current-members">
+          <center><b><u>Current Members</u></b></center>
+          <b>PhD Students</b>
+          <ul>
+            <li>Imrankhan Mulani  (Aug 2015 - Present) </li>
+            <li>Umashankar Rajput (Jan 2019 - Present)</li>
+            <li>Vaibhav Walve     (Aug 2020 - Present)</li>
+          </ul>
+          <b>Post-Doc Fellow</b>
+          <ul>
+            <li>Giriraj Vyas      (Aug 2015 - Present) </li>
+          </ul>
+          <br/><br/>
+        </div>
+        <div class="allumni">
+          <center><b><u>Allumni</u></b></center>
+          <b>BS MS Students</b>
+          <ul>
+            <li>Navathej Ganesh    </li>
+            <li>Thasneem A        </li>
+          </ul>
+          <b>PhD Students</b>
+          <ul>
+            <li>SK Rejaul          </li>
+          </ul>
+          <b>Post-Doc Fellow</b>
+          <ul>
+            <li>Dr. Sumati Patil   </li>
+          </ul>
+        </div>
+      </div>
+    
+
 
       <div class="footer-container">
         <br/><br/><br/><br/>
