--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
         </div>
         <div id="biooutreach" class="bio outreach">
           <br/><br/>
-          Talk on ‘The Exciting Science of 2D Materials’ by Aparna Deshpande. This lecture was a part of Jidnyasa Virtual Lecture Series at Praj Matrix. 
+          <ul>
+            <li> Talk on ‘The Exciting Science of 2D Materials’ by Aparna Deshpande. This lecture was a part of Jidnyasa Virtual Lecture Series at Praj Matrix.</li>
           <br/><br/>
-          Talk on '<a href="https://www.youtube.com/watch?v=x2zSeHxMkoE">Reaching out to atoms, molecules and surfaces using scanning tunneling microscopy</a>' in the Science Gappa Series at Dr. Abasaheb Garware College Pune.
+            <li> Talk on '<a href="https://www.youtube.com/watch?v=x2zSeHxMkoE">Reaching out to atoms, molecules and surfaces using scanning tunneling microscopy</a>' in the Science Gappa Series at Dr. Abasaheb Garware College Pune.</li>
+          </ul>
       </div>
       <div id="biogroup" class="bio group">
         <br/><br/>
@@ -128,8 +130,7 @@
         </div>
       </div>
     
-
-
+      
       <div class="footer-container">
         <br/><br/><br/><br/>
         <div class="footer-content">
