--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="button-cover"><button id="outreach" class="button-item" onclick="DisplayBio('outreach')"> Outreach</button></div>
           <div class="button-cover"><button id="group" class="button-item" onclick="DisplayBio('group')"> Group</button></div>
         </div>
-        <br/><br/><br/><br/>
+        <br/><br/><br/><br/><br/><br/>
         <div id="bioshort" class="bio short">
           <br/><br/>
           Welcome, My name is Aparna. I am a Physics Professor at <a href="https://www.iiserpune.ac.in/">IISER Pune</a>. 
@@ -113,7 +113,7 @@
           <br/><br/>
         </div>
         <div class="allumni">
-          <center><b><u>Allumni</u></b></center>
+          <center><b><u>Alumni</u></b></center>
           <b>BS MS Students</b>
           <ul>
             <li>Navathej Ganesh    </li>
