--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="biolong" class="bio long">
           <br/><br/>
           Welcome, My name is Aparna. I am a Physics Professor at <a href="https://www.iiserpune.ac.in/">IISER Pune</a>. 
-          I am passionate about and have been assosciated with the reasearch field for around 10+ years.
+          I am passionate about and have been associated with the reasearch field for around 10+ years.
           I zoom into the world of 2D materials in my STM (Scanning Tunneling Microscopy) laboratory where we visualize, probe and manipulate matter atom-by-atom.<br/><br/>
             <u>Brief Background:</u>
             <ul>
@@ -108,7 +108,7 @@
           </ul>
           <b>Post-Doc Fellow</b>
           <ul>
-            <li>Giriraj Vyas      (Aug 2015 - Present) </li>
+            <li>Giriraj Vyas      (Aug 2020 - Present) </li>
           </ul>
           <br/><br/>
         </div>
