--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="bioshort" class="bio short">
           <br/><br/>
           Welcome, My name is Aparna. I am a Physics Professor at <a href="https://www.iiserpune.ac.in/">IISER Pune</a>. 
-          I am passionate about and have been assosciated with the reasearch field for around 10+ years.
+          I am passionate about and have been associated with the reasearch field for around 10+ years.
           I zoom into the world of 2D materials in my STM (Scanning Tunneling Microscopy) laboratory where we visualize, probe and manipulate matter atom-by-atom.
         </div>
         <div id="biolong" class="bio long">
