--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
           <div class="button-cover"><button id="short" class="button-item" onclick="DisplayBio('short')"> In Brief</button></div>
           <div class="button-cover"><button id="long" class="button-item" onclick="DisplayBio('long')">At Length</button></div>
           <div class="button-cover"><button id="research" class="button-item" onclick="DisplayBio('research')">Research</button></div>
-          <div class="button-cover"><button id="outreach" class="button-item" onclick="DisplayBio('outreach')"> Outreach</button></div>
-          <div class="button-cover"><button id="group" class="button-item" onclick="DisplayBio('group')"> Group</button></div>
+          <div class="button-cover"><button id="citations" class="button-item" onclick="DisplayBio('citations')">Citations</button></div>
+          <div class="button-cover"><button id="outreach" class="button-item" onclick="DisplayBio('outreach')">Outreach</button></div>
+          <div class="button-cover"><button id="group" class="button-item" onclick="DisplayBio('group')">Group</button></div>
         </div>
         <br/><br/><br/><br/><br/><br/>
         <div id="bioshort" class="bio short">
@@ -95,40 +96,60 @@
           <br/><br/>
             <li> Talk on '<a href="https://www.youtube.com/watch?v=x2zSeHxMkoE">Reaching out to atoms, molecules and surfaces using scanning tunneling microscopy</a>' in the Science Gappa Series at Dr. Abasaheb Garware College Pune.</li>
           </ul>
-      </div>
-      <div id="biogroup" class="bio group">
-        <br/><br/>
-        <div class="current-members">
-          <center><b><u>Current Members</u></b></center>
-          <b>PhD Students</b>
-          <ul>
-            <li>Imrankhan Mulani  (Aug 2015 - Present) </li>
-            <li>Umashankar Rajput (Jan 2019 - Present)</li>
-            <li>Vaibhav Walve     (Aug 2020 - Present)</li>
-          </ul>
-          <b>Post-Doc Fellow</b>
-          <ul>
-            <li>Giriraj Vyas      (Aug 2020 - Present) </li>
-          </ul>
+        </div>
+        <div id="biogroup" class="bio group">
           <br/><br/>
+          <div class="current-members">
+            <center><b><u>Current Members</u></b></center>
+            <b>PhD Students</b>
+            <ul>
+              <li>Imrankhan Mulani  (Aug 2015 - Present) </li>
+              <li>Umashankar Rajput (Jan 2019 - Present)</li>
+              <li>Vaibhav Walve     (Aug 2020 - Present)</li>
+            </ul>
+            <b>Post-Doc Fellow</b>
+            <ul>
+              <li>Giriraj Vyas      (Aug 2020 - Present) </li>
+            </ul>
+            <br/><br/>
+          </div>
+          <div class="allumni">
+            <center><b><u>Alumni</u></b></center>
+            <b>BS MS Students</b>
+            <ul>
+              <li>Navathej Ganesh    </li>
+              <li>Thasneem A        </li>
+            </ul>
+            <b>PhD Students</b>
+            <ul>
+              <li>SK Rejaul          </li>
+            </ul>
+            <b>Post-Doc Fellow</b>
+            <ul>
+              <li>Dr. Sumati Patil   </li>
+            </ul>
+          </div>
         </div>
-        <div class="allumni">
-          <center><b><u>Alumni</u></b></center>
-          <b>BS MS Students</b>
-          <ul>
-            <li>Navathej Ganesh    </li>
-            <li>Thasneem A        </li>
-          </ul>
-          <b>PhD Students</b>
-          <ul>
-            <li>SK Rejaul          </li>
-          </ul>
-          <b>Post-Doc Fellow</b>
-          <ul>
-            <li>Dr. Sumati Patil   </li>
-          </ul>
+        <div id="biocitations" class="bio citations">
+          <center><b><u>Key Publications</u></b></center>
+          <ol>
+            <li><b>Imrankhan Mulani, Umashankar Rajput</b>, Luminita Harnagea, and <b>Aparna Deshpande</b> ” Perturbation of charge density waves in 1T-TiSe2″ Phys. Rev. B ( 2021) <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.103.125430">Link</a></li><br/>
+            <li>Abhijit Biswas, Arundhati Sengupta,<b> Umashankar Rajput</b>, Sachin Kumar Singh, Vivek Antad, Sk Mujaffar Hossain, Swati Parmar, Dibyata Rout, <b>Aparna Deshpande</b>, Sunil Nair, and Satishchandra Ogale “Growth, properties, and applications of nanolaminate Ti3AlC2 thin films” Phys. Rev. Applied (2020)</li><br/>
+            <li><b>Rejaul Sk</b> and <b>Aparna Deshpande</b>, “Unveiling the emergence of functional materials with STM: metal phthalocyanine on surface architectures”, invited review article for Molecular Systems Design & Engineering, 4, 471 (2019)</li><br/>
+            <li><b>Rejaul Sk, Imrankhan Mulani</b>, and <b>Aparna Deshpande</b>, “Emergent Properties of Organic Molecule-Topological Insulator Hybrid Interface: Cu-Phthalocyanine on Bi2Se3”  J. Phys. Chem. C 122, 40, 22996 (2018)</li><br/>
+            <li><b>Rejaul Sk</b>, Srilatha Arra, Barun Dhara, Joel S. Miller, Mukul Kabir, and <b>Aparna Deshpande</b>, “Effect of Cyano Substitution on the Step-Edge Adsorption of Copper Phthalocyanine on Au(111)”, Phys. Chem. C  122, 22, 11848 (2018)</li><br/>
+            <li><b>Rejaul Sk</b>, Srilatha Arra, Barun Dhara, Joel S. Miller, Mukul Kabir, and <b>Aparna Deshpande</b>, “Enhancing the Intermolecular Interaction by Cyano Substitution in CuPc”, Phys. Chem. C 122, 1, 429 (2018)</li><br/>
+            <li><b>Sumati Patil</b>, Sadhu Kolekar, <b>Aparna Deshpande</b>, “Revisiting HOPG superlattices: Structure and conductance properties”, Surface Science, 658, 55-60, (2017)</li><br/>
+            <li><b>Rejaul Sk</b>, Mandar Shirolkar, Barun Dhara, Sulabha Kulkarni, and <b>Aparna Deshpande</b>,“Enhancing the thermopower and tuning the resistivity in Bi2Se3 with Fe-doping”, Chemical Physics Letters, 638, 94 (2015)</li><br/>
+            <li><b>Aparna Deshpande</b>, Chun-Hong Sham, Justice M. P. Alaboson, Jonathan M. Mullin, George C. Schatz, and Mark C. Hersam, Self-Assembly and Photopolymerization of Sub‑2 nm One-Dimensional Organic Nanostructures on Graphene, J. Am. Chem. Soc., 134, 16759 (2012)</li><br/>
+            <li><b>Aparna Deshpande</b> and Brian LeRoy, “Scanning probe microscopy of graphene“, Physica E, 44, 743 (2012) (invited review article).</li><br/>
+            <li><b>Aparna Deshpande</b>, Wenzhong Bao, Feng Miao, Chun Ning Lau, and Brian LeRoy, Spatially resolved spectroscopy of monolayer graphene on SiO2, Phys. Rev. B, 79, 205411 (2009). Accompanying synopsis in Physics. <a href="http://physics.aps.org/synopsis-for/10.1103/PhysRevB.79.205411">Link.</a> </li><br/>
+            <li><b>Aparna Deshpande</b>, Dandapani Acharya, Joel Vaughn, Saw-Wai Hla, Handan Yildirim, Abdelkader Kara, and Talat Rahman, Atom-by-atom extraction using scanning tunneling microscope tip-cluster interaction, Phys. Rev. Lett., 98, 028304 (2007)</li><br/>
+            <li>Violeta Iancu, <b>Aparna Deshpande</b> and Saw-Wai Hla, Manipulating Kondo Resonance in Two-Dimensional Molecular Self-Assembly, Phys. Rev. Lett., 97, 266603 (2006)</li><br/>
+          </ol>
         </div>
       </div>
+    </div>
     
       
       <div class="footer-container">
