--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="button-cover"><button id="short" class="button-item" onclick="DisplayBio('short')"> In Brief</button></div>
           <div class="button-cover"><button id="long" class="button-item" onclick="DisplayBio('long')">At Length</button></div>
           <div class="button-cover"><button id="research" class="button-item" onclick="DisplayBio('research')">Research</button></div>
-          <div class="button-cover"><button id="citations" class="button-item" onclick="DisplayBio('citations')">Citations</button></div>
+          <div class="button-cover"><button id="citations" class="button-item" onclick="DisplayBio('citations')">Publications</button></div>
           <div class="button-cover"><button id="outreach" class="button-item" onclick="DisplayBio('outreach')">Outreach</button></div>
           <div class="button-cover"><button id="group" class="button-item" onclick="DisplayBio('group')">Group</button></div>
         </div>
