--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="socail-account">
             <a href="https://www.linkedin.com/in/aparna-deshpande-01927015/" class="social-account-link"><img src="Artifacts/linkedin_logo.jpg" alt="linkedin"></a>
             <a href="https://www.iiserpune.ac.in/research/department/physics/people/faculty/regular-faculty/aparna-deshpande/259" class="social-account-link"><img src="Artifacts/IISERPune-Logo.jpg" alt="linkedin"></a>
+			<a href="https://scholar.google.co.in/citations?user=f5FnqMIAAAAJ&hl=en" class="social-account-link"><img src="Artifacts/GoogleScholar-logo.jpg" alt="google-scholar"></a>
           </div>
         </div>
         <div class="img-frame">
@@ -55,7 +56,7 @@
         </div>
         <div id="biolong" class="bio long">
           <br/><br/>
-          Welcome, My name is Aparna. I am a Physics Professor at<a href="https://www.iiserpune.ac.in/"> IISER Pune</a>. 
+          Welcome, My name is Aparna. I am a Physics Professor at <a href="https://www.iiserpune.ac.in/">IISER Pune</a>. 
           I am passionate about and have been associated with the reasearch field for around 10+ years.
           I zoom into the world of 2D materials in my STM (Scanning Tunneling Microscopy) laboratory where we visualize, probe and manipulate matter atom-by-atom.<br/><br/>
             <u>Brief Background:</u>
