--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
           <span id="footer-author">- RICHARD FEYNMAN</span>
         </div>
       </div>
-
+	<div>
+		<div class='sk-ww-twitter-feed' data-embed-id='164121'></div><script src='https://widgets.sociablekit.com/twitter-feed/widget.js' async defer></script>
+	</div>
       <!-- <div class="dark-mode-toggler">
         <label class="toggle-label"> Dark Mode</label>
         <label class="switch">
